hadoop-ozone/dist/src/main/k8s/examples/ozone-split-kerberos/scm-service.yaml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0

apiVersion: v1
kind: Service
metadata:
  name: scm
spec:
  clusterIP: None
  ports:
  - port: 9876
    name: ui
  - port: 9861
    name: rpc
  selector:
    app: ozone
    component: scm
